# PasteShareApp

./: .gitignore
backend/: pyproject.toml
backend/app/: main.py
backend/app/api/: auth.py  paste_api.py  routers.py
backend/app/core/: project_config.py
backend/app/dependencies/: paste_dependencies.py  user_dependencies.py
backend/app/models/: paste_model.py  users_model.py
backend/app/repositories/: paste_repository.py  user_repository.py
backend/app/schemas/: base_schema.py  paste_schema.py  user_schema.py
backend/app/services/: paste_service.py  user_service.py
backend/migrations/: env.py
frontend/: package-lock.json  package.json  vite.config.ts
frontend/app/: store.ts
frontend/services/: api.ts  baseQuery.ts
frontend/src/: App.module.scss  App.tsx  index.css  main.tsx
frontend/src/components/DefaultHeader/: DefaultHeader.tsx
frontend/src/components/Footer/: Footer.module.scss  Footer.tsx
frontend/src/components/Header/: Header.module.scss  Header.tsx
frontend/src/components/PasteItems/: PasteItems.module.scss  PasteItems.tsx
frontend/src/components/PlusButton/: PlusButton.module.scss  PlusButton.tsx
frontend/src/hooks/: useAuth.ts
frontend/src/pages/CreatePage/: CreatePage.module.scss  CreatePage.tsx
frontend/src/pages/GetPage/: ReadPage.module.scss  ReadPage.tsx
frontend/src/pages/ProtectedRoute/: ProtectedRoute.tsx
frontend/src/pages/ReadPage/: ReadPage.tsx
frontend/src/services/: api.ts  baseQuery.ts  createApi.ts  pasteApi.ts  types.ts  userApi.ts
frontend/src/styles/: _variables.scss
(+4 files in other folders)
