[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["ShevchenkoO <shevchenko.sasha2005@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.136.0"
uvicorn = "^0.45.0"
pydantic = "^2.13.3"
pydantic-settings = "^2.14.0"
alembic = "^1.18.4"
psycopg2-binary = "^2.9.12"
psycopg2 = "^2.9.12"
asyncpg = "^0.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
