[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["ShevchenkoO <shevchenko.sasha2005@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.136.0"
uvicorn = "^0.45.0"
pydantic = {extras = ["email"], version = "^2.13.3"}
pydantic-settings = "^2.14.0"
alembic = "^1.18.4"
psycopg2-binary = "^2.9.12"
psycopg2 = "^2.9.12"
asyncpg = "^0.31.0"
passlib = {version = "1.7.4", extras = ["bcrypt"]}
pyjwt = "^2.12.1"
bcrypt = "4.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
